fix: renown and morale icon in relation screen being squished

--- a/ui/mods/mod_hardened/css_hooks/world_relations_screen.css
+++ b/ui/mods/mod_hardened/css_hooks/world_relations_screen.css
@@ -11,6 +11,7 @@
 {
 	position: static; /* Use default positioning to work with flexbox */
 
+	width: auto;	/* In Vanilla this is hard-coded to 13.0rem, resulting in img to be squished */
 	flex-direction: row; /* Align image and text horizontally */
 	display: flex;
 	align-items: center;
